--- a/templates/pokemon/details.html.twig
+++ b/templates/pokemon/details.html.twig
@@ -8,7 +8,7 @@
     <div id="detailPokemon">
         <h2 style="text-align: center">{{ pokemon.nom }}</h2>
         <div>
-            <img src="{{ asset('img/pokemon/'~pokemon.nom ) }}" alt="">
+            <img src="{{ asset('img/pokemon/'~pokemon.image ) }}" alt="">
         </div>
         <div> attaque : {{ pokemon.attaque }} </div>
         <div> defense : {{ pokemon.defense }} </div>
