--- a/templates/pokemon/details.html.twig
+++ b/templates/pokemon/details.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+    <a href="{{ path('pokemon_list') }}">&rarr;liste de pokemons</a>
     <div id="detailPokemon">
         <h2 style="text-align: center">{{ pokemon.nom }}</h2>
         <div>
