creation pokemon + image

--- a/templates/main/list.html.twig
+++ b/templates/main/list.html.twig
@@ -7,7 +7,8 @@
 {% block body %}
 
     <a href="{{ path('pokemon_list', {'tri': 'est_capture'}) }}">Trier par pokemon capturé |</a>
-    <a href="{{ path('pokemon_list', {'tri': 'nom'}) }}">Trier par nom</a>
+    <a href="{{ path('pokemon_list', {'tri': 'nom'}) }}">Trier par nom |</a>
+    <a href="{{ path('pokemon_create') }}">créer pokemon</a>
 
     <hr>
 
